src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/AMDVertexShaderTessellator_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/AMDVertexShaderTessellator_StringErrorContext.class */
public final class AMDVertexShaderTessellator_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glTessellationFactorAMD(F)V", "net/labymod/core/laby3d/opengl/error/generated/AMDVertexShaderTessellatorErrorContext");
        methods.put("glTessellationModeAMD(I)V", "net/labymod/core/laby3d/opengl/error/generated/AMDVertexShaderTessellatorErrorContext");
        return methods;
    }
}
